objects/WT_Utility_Lookup_Record_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>WT_Component_Unique_Name__c</fullName>
        <label>Component Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_1_API_Name__c</fullName>
        <label>Object 1 API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_1_Icon_Name__c</fullName>
        <label>Object 1 Icon Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_1_Query__c</fullName>
        <label>Object 1 Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Object_1_Subtitle__c</fullName>
        <label>Object 1 Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_1_Title__c</fullName>
        <label>Object 1 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_2_API_Name__c</fullName>
        <label>Object 2 API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_2_Icon_Name__c</fullName>
        <label>Object 2 Icon Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_2_Query__c</fullName>
        <label>Object 2 Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Object_2_Subtitle__c</fullName>
        <label>Object 2 Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_2_Title__c</fullName>
        <label>Object 2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_3_API_Name__c</fullName>
        <label>Object 3 API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_3_Icon_Name__c</fullName>
        <label>Object 3 Icon Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_3_Query__c</fullName>
        <label>Object 3 Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Object_3_Subtitle__c</fullName>
        <label>Object 3 Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Object_3_Title__c</fullName>
        <label>Object 3 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Utility Lookup Record Setting</label>
    <pluralLabel>Utility Lookup Record Settings</pluralLabel>
</CustomObject>